# sparsimony

./: .flake8  .gitignore  .pre-commit-config.yaml  CITATION.cff  README.md  pre_commit_setup.py  pyproject.bak.toml  pyproject.toml
.github/workflows/: cd.yaml  ci.yaml
examples/: pytorch_imagenet.py
sparsimony/: __init__.py  api.py  meta_tensor.py  nn_init.py  transformers_callback.py  transformers_hook.py  utils.py
sparsimony/distributions/: base.py
sparsimony/dst/: __init__.py  base.py  dense.py  gmp.py  local_overparametrization.py  rigl.py  set.py  srigl.py  sset.py  static.py
sparsimony/mask_calculators/: __init__.py  base.py  fine_grained.py  hierarchical.py  neuron.py  scorers.py  unstructured.py
sparsimony/optim/: __init__.py  optim_wrapper.py  type_registry.py
sparsimony/parametrization/: fake_sparsity.py  no_mask_ste.py  ste_parametrization.py
sparsimony/pruners/: __init__.py  base.py  ste.py  unstructured.py
sparsimony/schedulers/: base.py
tests/sparsimony/: test_dst_mixin.py  test_growers.py  test_neuron_pruners.py  test_parametrization.py  test_pruners.py  test_schedulers.py
