[tool.poetry]
name = "sparsimony"
version = "0.1.0"
description = ""
authors = ["Mike Lasby"]
homepage = "https://github.com/mklasby/sparsimony"
readme = "README.md"
license = "MIT"
keywords = []
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
packages= [
    {include = "sparsimony"}
]

[tool.poetry.dependencies]
python = ">=3.9,<=3.12"
torch=">=2.0"
numpy="1.*"

[tool.poetry.group.dev.dependencies]
flake8 = "^7.0.0"
black = "^24.2.0"
pre-commit = "^3.6.2"
pytest = "^8.1.1"
pytest-cov = "^5.0.0"


[tool.poetry.urls]
"Issues" = "https://github.com/mklasby/sparsimony/issues"
"Repo" = "https://github.com/mklasby/sparsimony"


[build-system]
requires = ["poetry-core>=1.8.1"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 80
exclude ='''
/(
    artifacts/*
    | .venv/*
)
'''

[tool.pytest.ini_options]
pythonpath = [
    ".", "./src", "./tests"
]
# addopts = "--cov src --cov-report html --cov-branch --import-mode importlib"
addopts = "--import-mode importlib"
markers = [
    "integration",
    "slow",
    "dist",
]
norecursedirs = "tests/utils"
testpaths = "tests"
